--- a/festivalmenu.html
+++ b/festivalmenu.html
@@ -1,9 +1,12 @@
 <html>
 	<head>
-		<title>festival menu;節日菜譜</title>
+	<title>Pre-order Menu</title>
 	</head>
 	<body>
-	 <img src="節日菜譜p1.png" >
-    	 <img src="節日菜譜p2.png" >
+		<p> <Center><b><font size="+3">益新美食館節日專用菜單</font></b></Center><br>
+		<font size="+2"><b>益新美食館節日專用菜單</b><br> 
+		These are our Festival menus.<br>.</font> </p>
+	<img src="節日菜譜p1.png" width="80%" height="600px">
+	<img src="節日菜譜p2.png" width="80%" height="600px">
 	</body>
 </html>
